10283
What the compiler should say:
```scala
package p {
  class C[A]
  class X extends C[_]
  object `package` extends X
}
```
```
sandbox/test.scala:3: error: class type required but p.C[_] found
  class X extends C[_]
                  ^
```
